--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
 
         <div class="six">
-            <img src="./img/RR.mp4" alt="profile" class="profile-picture" id="imagePath"/>
+            <video src="./img/RR.mp4" alt="profile" class="profile-picture" id="imagePath"/>
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
                 <h3 class="wish-hbd">Happy Birthday!</h3>
